--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "framer-motion": "^5.3.1",
